# OpenVolumeMesh

./: .CMakeLists.txt.swp  .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  LICENSE.md  README.md
CI/: Windows.bat  ci-cppcheck.sh  ci-doc.sh  ci-linux.sh  ci-mac.sh
CI/unibe/: gitlab-ci.yml
cmake/: ACGCommon.cmake  ACGCompiler.cmake
codegen/ResourceManager_convenience_functions/: vertex_functions.hh
documentation/: CMakeLists.txt  doxy.config.in
documentation/subpages/: binary_file_format.docu  building_openvolumemesh.docu
examples/: CMakeLists.txt
extra/ovmb-kaitai/: ovmb.ksy
src/: CMakeLists.txt
src/FileConverter/: CMakeLists.txt  MeshGenerator.hpp  ovm_converter.cc  ovmb_converter.cc
src/FileConverter/Grammars/: Netgen.hpp  Tetmesh.hpp
src/OpenVolumeMesh/Attribs/: ColorAttrib.hh  ColorAttribT_impl.hh  InterfaceAttrib.cc  InterfaceAttrib.hh  NormalAttrib.hh  NormalAttribT.cc  NormalAttribT_impl.hh  OpenVolumeMeshStatus.hh  StatusAttrib.cc  StatusAttrib.hh  StatusAttribT.cc  StatusAttribT_impl.hh  TexCoordAttrib.hh  TexCoordAttribT_impl.hh
src/OpenVolumeMesh/Config/: Version.hh.in
src/OpenVolumeMesh/Core/: BaseEntities.cc  BaseEntities.hh  BaseProperty.cc  BaseProperty.hh  Entities.hh  EntityUtils.hh  ForwardDeclarations.hh  GeometryKernel.hh  HandleIndexing.hh  Handles.hh  IncidencesT.hh  IncidencesT_impl.hh  Iterators.cc  Iterators.hh  OpenVolumeMeshBaseProperty.cc  OpenVolumeMeshBaseProperty.hh  OpenVolumeMeshHandle.cc  OpenVolumeMeshHandle.hh  OpenVolumeMeshProperty.hh  PropertyDefines.cc  PropertyDefines.hh  PropertyDefinesT.cc  PropertyDefinesT_impl.hh  PropertyHandles.hh  PropertyPtr.hh  PropertyPtrT_impl.hh  PropertyStorageBase.cc  PropertyStorageBase.hh  PropertyStorageT.hh  ResourceManager.cc  ResourceManager.hh  ResourceManagerT_impl.hh  Serializers.cc  Serializers.hh  SerializersT_impl.hh  TopologyKernel.cc  TopologyKernel.hh  TypeName.cc  TypeName.hh  VertexEdgeIncidence.cc  (+1 more)
src/OpenVolumeMesh/Core/Iterators/: BaseCirculator.hh  BaseIterator.hh  BoundaryItemIter.cc  BoundaryItemIter.hh  GenericCirculator.hh  HalfFaceVertexIter.cc  HalfFaceVertexIter.hh
src/OpenVolumeMesh/Core/Iterators/detail/: CellFaceIterImpl.cc  FaceHalfEdgeIterImpl.cc  HalfFaceHalfEdgeIterImpl.cc  HalfFaceHalfEdgeIterImpl.hh
src/OpenVolumeMesh/Core/Properties/: AddEntityHandleAccess.hh  Defaults.hh  PrivateProperty.hh  PropertyPtr.hh  PropertyStorageBase.cc  PropertyStorageBase.hh  PropertyStoragePtr.hh  PropertyStorageT.hh
src/OpenVolumeMesh/Core/Properties/Defaults/: Eigen.hh  EigenSparse.hh  common.hh  map.hh  pair.hh  tuple.hh  unordered_map.hh
src/OpenVolumeMesh/Core/detail/: HalfEdgeHalfFaceIncidence.cc  HalfEdgeHalfFaceIncidence.hh  HalfFaceCellIncidence.cc  HalfFaceCellIncidence.hh  IncidencesT.hh  IncidencesT_impl.hh  Tracking.hh  VertexHalfEdgeIncidence.cc  VertexHalfEdgeIncidence.hh  internal_type_name.cc  internal_type_name.hh
src/OpenVolumeMesh/FileManager/: FileManager.cc  FileManager.hh  FileManagerT.cc  FileManagerT_impl.hh  VtkColorReader.hh
src/OpenVolumeMesh/Geometry/: EigenTraits.hh  Vector.cc  Vector11T.hh
src/OpenVolumeMesh/IO/: BinaryFileReader.cc  BinaryFileReader.hh  BinaryFileReaderT_impl.hh  BinaryFileWriter.hh  BinaryFileWriterT_impl.hh  BinaryIO.cc  BinaryIO.hh  IO.hh  PropertyCodec.cc  PropertyCodec.hh  PropertyCodecEigen.hh  PropertyCodecT_impl.hh  PropertyCodecs.cc  PropertyCodecs.hh  PropertyCodecsEigen.hh  PropertyCodecsT_impl.hh  PropertySerialization.cc  PropertySerialization.hh  PropertySerializationT.hh  PropertySerializationT_impl.hh  ReadOptions.hh  WriteOptions.hh  enums.cc  enums.hh  ovmb_read.cc  ovmb_read.hh  ovmb_read_impl.hh  ovmb_write.hh  ovmb_write_impl.hh
src/OpenVolumeMesh/IO/detail/: BinaryFileReader.cc  BinaryFileReader.hh  BinaryFileReaderImpl.cc  BinaryFileReaderImpl.hh  BinaryFileReaderImplT_impl.hh  BinaryFileReader_impl.hh  BinaryFileWriter.cc  BinaryFileWriter.hh  BinaryFileWriterImpl.hh  BinaryFileWriterImplT_impl.hh  BinaryIStream.cc  Decoder.cc  Decoder.hh  Encoder.cc  Encoder.hh  GeometryReader.cc  GeometryReader.hh  GeometryReaderT_impl.hh  GeometryWriter.hh  GeometryWriterT_impl.hh  WriteBuffer.cc  WriteBuffer.hh  ovmb_codec.cc  ovmb_format.cc  ovmb_format.hh
src/OpenVolumeMesh/Mesh/: HexahedralMesh.hh  HexahedralMeshIterators.cc  HexahedralMeshIterators.hh  HexahedralMeshTopologyKernel.cc  HexahedralMeshTopologyKernel.hh  PolyhedralMesh.hh  TetrahedralGeometryKernel.hh  TetrahedralMesh.hh  TetrahedralMeshIterators.cc  TetrahedralMeshIterators.hh  TetrahedralMeshTopologyKernel.cc  TetrahedralMeshTopologyKernel.hh
src/OpenVolumeMesh/System/: Compiler.hh  Deprecation.hh
src/OpenVolumeMesh/Util/: SmartTagger.hh
src/Unittests/: CMakeLists.txt  unittests.cc  unittests_basics.cc  unittests_common.hh  unittests_eigen.cc  unittests_files.cc  unittests_garbage_collection.cc  unittests_iterators.cc  unittests_mesh_copies.cc  unittests_properties.cc  unittests_smart_tagger.cc  unittests_smartptr.cc  unittests_swap_entities.cc  unittests_tet_mesh_navigation.cc
src/Unittests/TestFiles/: Cube_with_props.ovmb  Cylinder.ovmb  NonManifold.ovmb
